--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "aa-hardhat",
-  "version": "0.0.6",
+  "name": "hardhat-aa",
+  "version": "0.4.4",
   "description": "Account abstraction plugin for hardhat",
   "repository": "https://github.com/Arch0125/aa-hardhat-plugin",
   "author": "Nomic Labs LLC",
@@ -28,7 +28,6 @@
     "README.md"
   ],
   "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@types/chai": "^4.1.7",
     "@types/cli-color": "^2.0.2",
     "@types/fs-extra": "^5.0.4",
