--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,8 @@
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
-  "exclude": ["dist", "node_modules","src/bundler"],
+  "exclude": ["dist", "node_modules","src/bundler","src/account-abstraction"],
   "include": [
     "./test",
     "./src"
-, "bundler"  ]}
+, "bundler","account-abstraction"]}
